--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-chatgpt-share-app",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "main": "main.js",
   "description": "BIT超级共享GPT",
   "author": "BobH",
@@ -32,6 +32,7 @@
       "output": "dist"
     },
     "files": [
+      ".env",
       "preload.js",
       "package.json",
       "node_modules/**/*",
