--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-chatgpt-share-app",
-  "version": "1.0.15",
+  "version": "1.1.0",
   "main": "main.js",
   "description": "BITSuperGPT",
   "author": "BobH",
@@ -9,7 +9,7 @@
     "start": "electron .",
     "build:win": "npm run pack_js && electron-builder --windows",
     "build:mac": "npm run pack_js && electron-builder --mac",
-    "build:all": "npm run pack_js && electron-builder --all",
+    "build:all": "npm run pack_js && npm run build:win && npm run build:mac",
     "pack_js": "npx webpack --config webpack.config.js --mode production"
   },
   "devDependencies": {
